<resources>
    <string name="app_name">MyNavDemo3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="contact_fragment_title">Contact Fragment</string>
    <string name="home_fragment_title">Home Fragment</string>
    <string name="go_to_contacts">Go To Contacts</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="submit_contact_button">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details_fragment_title">Contact Details</string>
    <string name="button_home">Go Home</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
</resources>